unpackaged/main/default/objects/Relationship_Details__c/Relationship_Details__c.object-meta.xml
<CustomObject>
    <label>Relationship Details</label>
    <nameField>
        <displayFormat>RE-{000000}</displayFormat>
        <label>Relationship Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationship Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>