unpackaged/main/default/objects/Relationship_Details__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relationship Details</relationshipLabel>
    <relationshipName>Relationship_Details</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>