unpackaged/main/default/objects/Relationship_Details__c/fields/DCC_Influence_Level__c.field-meta.xml
<CustomField>
    <fullName>DCC_Influence_Level__c</fullName>
    <formula>TEXT(Contact__r.DCC_Influence_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DCC Influence Level</label>
    <type>Text</type>
</CustomField>