unpackaged/main/default/objects/Relationship_Details__c/fields/Description_of_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Relationship__c</fullName>
    <label>Description of Relationship</label>
    <type>TextArea</type>
</CustomField>