unpackaged/main/default/objects/Relationship_Details__c/fields/Relationship_Count__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>