unpackaged/main/default/objects/Relationship_Details__c/fields/Relationship_Score1__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Score1__c</fullName>
    <label>Relationship Score1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>