unpackaged/main/default/objects/Relationship_Details__c/fields/Relationship_Score__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Score__c</fullName>
    <formula>100/VALUE(TEXT(Quality_of_Relationship__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>