unpackaged/main/default/objects/Relationship_Details__c/fields/TF_Influence_Level__c.field-meta.xml
<CustomField>
    <fullName>TF_Influence_Level__c</fullName>
    <formula>TEXT(Contact__r.TF_Influence_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TF Influence Level</label>
    <type>Text</type>
</CustomField>