unpackaged/main/default/objects/Relationship_Details__c/fields/With_Whom__c.field-meta.xml
<CustomField>
    <fullName>With_Whom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>With Whom</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Relationship_Details</relationshipName>
    <type>Lookup</type>
</CustomField>