unpackaged/main/default/objects/Relationship_Details__c/fields/With_Whom_User_Active__c.field-meta.xml
<CustomField>
    <fullName>With_Whom_User_Active__c</fullName>
    <description>To check if WIth Whom is an active user - Saurabh 03/12/21</description>
    <formula>With_Whom__r.IsActive</formula>
    <label>With Whom User Active?</label>
    <type>Checkbox</type>
</CustomField>