unpackaged/main/default/objects/Relationship_Details__c/validationRules/Relationship_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Relationship_Description</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(TEXT(Quality_of_Relationship__c) = &quot;1&quot;, 
TEXT(Quality_of_Relationship__c) = &quot;2&quot;, 
TEXT(Quality_of_Relationship__c) = &quot;3&quot;), Description_of_Relationship__c =&quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Description_of_Relationship__c</errorDisplayField>
    <errorMessage>Please enter a description of the relationship.</errorMessage>
</ValidationRule>